# sensor_rt_project

./: docker-compose.yml  pyproject.toml
src/: main.py
src/consumer/: Dockerfile  consumer.py
src/producer/: Dockerfile  producer.py
