[project]
name = "sensor-rt-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Tyrone",email = "tvalverdes9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=35.0.0,<36.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
